@@ -1,3 +1,13 @@
+
+2004/04/03: Martin Preuss<martin@libchipcard.de>
+------------------------------------------------
+- moved plugins to toplevel (grr, didn't think about the fact that the
+  plugins need libgwenhywfar which hasn't been compiled when compiling
+  the plugins...)
+  Please remember to CVS update using
+  "cvs up -d"
+
+
 2004/04/02: Martin Preuss<martin@libchipcard.de>
 ------------------------------------------------
 - plugin/dbio/csv: fixed factory function
